# starter-rust-rest-api

./: Cargo.toml  README.md  TODO.env  docker-compose.yml
entity/: Cargo.toml  README.md
entity/src/entities/: mod.rs  post.rs  prelude.rs  user.rs
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230309_012845_create_user_table.rs
src/: main.rs
src/routes/: mod.rs  post.rs  user.rs
